content ppt integrated

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     />
     <link rel="mask-icon" href="/mask-icon.svg" color="#FFFFFF" />
     <meta name="theme-color" content="#ffffff" />
-    <title>Vite + React + TS</title>
+    <title>DIGITAL QURBAN</title>
   </head>
   <body>
     <div id="root"></div>
